src/index.css
@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Quicksand", serif;
  font-optical-sizing: auto;
}

div .row {
  --bs-gutter-x: 1.5rem;
  --bs-gutter-y: 0;
}

button {
  background-color: none;
}

/* hero styling start */
.hero {
  width: 100%;
  height: 100vh;
  background-image: url("../src/assets/img/1.jpeg");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}

.hero-content {
  width: 100%;
  height: 100vh;
  background-color: #00092999;
}

/* stat info design */
.stat-info .info h4 {
  color: #f56630;
}

.img-con-box {
  width: 500px;
  height: 200px;
  position: relative;
}

.img-con-box img {
  position: absolute;
  margin: 0px auto;
}

.layer1 {
  top: 0;
  left: 100px;
  width: 300px;
}

.layer2 {
  top: 10px;
  left: 50px;
  width: 400px;
}

.layer3 {
  top: 25px;
  width: 500px;
}

@media screen and (max-width: 769px) {
  .img-con-box {
    width: 250px;
    height: 100px;
    margin: 10px auto;
    position: relative;
  }

  .img-con-box img {
    position: absolute;
  }

  .layer1 {
    top: 0;
    left: 15px;
    width: 225px;
  }

  .layer2 {
    top: 8px;
    left: 2px;
    width: 250px;
  }

  .layer3 {
    top: 20px;
    width: 275px;
    left: -10px;
  }
}

